k8s/auth-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: ivolve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: 800770414458.dkr.ecr.us-east-1.amazonaws.com/ivolve-auth:8
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ivolve
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: auth-service
