k8s/frontend-deploy-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: ivolve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: 800770414458.dkr.ecr.us-east-1.amazonaws.com/ivolve-frontend:9
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ivolve
spec:
  type: ClusterIP  
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend-service
